--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://emojicon.knexxel.repl.co/🐸" type="image/x-icon">
-  <title>Emojicon</title>
+  <title>emojicon</title>
 </head>
 <body>
-  <h1>Emojicon</h1>
+  <h1>emojicon</h1>
   <mark>To use:</mark><br>
   <textarea rows="4" cols="40">
     &lt;link rel="icon" href="https://emojicon.knexxel.repl.co/🐸" type="image/x-icon"&gt;
